--- a/Practica 1/reporte.tex
+++ b/Practica 1/reporte.tex
@@ -124,5 +124,9 @@
     \end{itemize}
 
     %Descripción detallada del funcionamiento de la función
-    
+    La función toma tres argumentos como entrada: el hijo, el delta y el porcentaje de mutación.
+    El hijo es un individuo que se mutará, el delta es el valor que se sumará o restará a cada variable del individuo 
+    y el porcentaje de mutación es el porcentaje de individuos que se mutarán.
+
+    La función comienza creando una lista donde se guardarán los hijos mutados 
 \end{document}
