Add figures for Rosenbrock and Ackley functions

--- a/Practica 1/reporte.tex
+++ b/Practica 1/reporte.tex
@@ -213,13 +213,79 @@
 
     \section*{Resultados}
     \subsection*{Función de Rosenbrock Real}
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=0.5\textwidth]{rosenbrock_7_re.jpeg}
+        \caption{Rosenbrock, semilla= 7, Real}
+    \end{figure}
+
+    \begin{figure}[p]
+        \centering
+        \includegraphics[width=0.5\textwidth]{rosenbrock_11_re.jpeg}
+        \caption{Rosenbrock, semilla= 11, Real}
+    \end{figure}
+
+    \begin{figure}[p]
+        \centering
+        \includegraphics[width=0.5\textwidth]{rosenbrock_61_re.jpeg}
+        \caption{Rosenbrock, semilla= 61, Real}
+    \end{figure}
 
     \subsection*{Función de Rosenbrock Binaria} 
+
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=0.5\textwidth]{rosenbrock_59_bin.jpeg}
+        \caption{Rosenbrock, semilla= 59, Binaria}
+    \end{figure}
+
+    \begin{figure}[p]
+        \centering
+        \includegraphics[width=0.5\textwidth]{rosenbrock_79_bin.jpeg}
+        \caption{Rosenbrock, semilla= 79, Binaria}
+    \end{figure}
+
+    \begin{figure}[p]
+        \centering
+        \includegraphics[width=0.5\textwidth]{rosenbrock_97_bin.jpeg}
+        \caption{Rosenbrock, semilla= 97, Binaria}
+    \end{figure}
+
     \subsection*{Función de Ackley Real}
-
-    \subsection*{Función de Ackley Binaria}
-    \newpage
-
-    \section*{Conclusiones}
     
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=0.5\textwidth]{ackley_7_re.jpeg}
+        \caption{Ackley, semilla= 7, Real}
+    \end{figure}
+    \begin{figure}[p]
+        \centering
+        \includegraphics[width=0.5\textwidth]{ackley_97_re.jpeg}
+        \caption{Ackley, semilla= 97, Real}
+    \end{figure}
+
+    \begin{figure}[p]
+        \centering
+        \includegraphics[width=0.5\textwidth]{ackley_113_re.jpeg}
+        \caption{Ackley, semilla= 113, Real}
+    \end{figure}
+    
+    \subsection*{Función de Ackley Binaria}
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=0.5\textwidth]{ackley_13_bin.jpeg}
+        \caption{Ackley, semilla= 13, Binaria}
+    \end{figure}
+    \begin{figure}[p]
+        \centering
+        \includegraphics[width=0.5\textwidth]{ackley_83_bin.jpeg}
+        \caption{Ackley, semilla= 83, Binaria}
+    \end{figure}
+    \begin{figure}[p]
+        \centering
+        \includegraphics[width=0.5\textwidth]{ackley_101_bin.jpeg}
+        \caption{Ackley, semilla= 101, Binaria}
+    \end{figure}
+
 \end{document}
