Add conclusion section to report

--- a/Practica 1/reporte.tex
+++ b/Practica 1/reporte.tex
@@ -288,4 +288,9 @@
         \caption{Ackley, semilla= 101, Binaria}
     \end{figure}
 
+    \newpage
+    \section*{Conclusiones}
+    Esta practica nos permitió implementar un algoritmo genético para resolver problemas de optimización en espacios continuos, es muy
+    interesante ver como el algoritmo genético es capaz de encontrar el mínimo de las funciones además de que
+    podemos destacar el proceso de creación del código que nos ha sido muy educativo y nos ha permitido entender mejor el funcionamiento de estos algoritmos.
 \end{document}
