Add table to report.tex

--- a/Practica 1/reporte.tex
+++ b/Practica 1/reporte.tex
@@ -424,7 +424,23 @@
         \includegraphics[width=0.5\textwidth]{ackley_101_bin.jpeg}
         \caption{Ackley, semilla= 101, Binaria}
     \end{figure}
-
+    \begin{figure}[htbp]
+        \centering
+        \begin{tabular}{|c|c|c|c|c|c|}
+        
+            \hline
+                Problema &Codificación &Mínimo &Máximo &Promedio &Desviación\\
+            \hline
+                Rosenbrock &Real &0.0 &0.0 &0.0 &0.0\\
+            \hline
+                Rosenbrock &Binaria &0.0 &0.0 &0.0 &0.0\\
+            \hline
+                Ackley &Real &0.0 &0.0 &0.0 &0.0\\
+            \hline
+                Ackley &Binaria &0.0 &0.0 &0.0 &0.0\\
+            \hline
+        \end{tabular}
+    \end{figure}
     \newpage
     \section*{Conclusiones}
     Esta practica nos permitió implementar un algoritmo genético para resolver problemas de optimización en espacios continuos, es muy
