--- a/Practica 2/practica2.tex
+++ b/Practica 2/practica2.tex
@@ -98,7 +98,7 @@
     Para la implementación del algoritmo genético se utilizó el lenguaje de programación Python.
     %Añade codigo p2.py
     \lstinputlisting[language=Python, style=mystyle]{p2.py}
-    \section{Conclusión}
+    \section{Discusión de Resultados}
     •  ¿Cuál fue la función objetivo que encontró más rápido el cuadrado mágico?
     La función que efectivamente puede encontrar más rápido un cuadrado mágico es la parte 
     de la función verificarexito que busca una aptitud de 0.0
@@ -115,6 +115,6 @@
 
     •  ¿Modificó  los  parámetros  de  su  algoritmo  para  los  diferentes  tamaños  del  cuadrado  mágico(n= 4yn= 5)? Si su respuesta es afirmativa ¿cuáles fueron los parámetros?
     Si, se utilizó parametros para n = 3 y 4, ya que el tiempo de ejecucion con otros parametros era bastante e incluso llegaba a romperse el programa.
-    
+
 
 \end{document}
